@@ -3,6 +3,7 @@ using System.Collections.Generic;
 using System.Linq;
 using System.Text;
 using System.Reflection;
+using System.Linq.Expressions;
 
 namespace AjModel
 {
@@ -23,9 +24,40 @@ namespace AjModel
 
         public string Description { get; set; }
 
-        public object GetValue(object entity)
+        public virtual object GetValue(object entity)
         {
             return this.info.GetValue(entity, null);
+        }
+
+        public bool IsEnumerable()
+        {
+            if (this.info.PropertyType.GetInterface("IEnumerable") != null)
+                return true;
+
+            return false;
+        }
+    }
+
+    public class PropertyModel<T, P> : PropertyModel
+    {
+        private Func<T, P> getter;
+
+        public PropertyModel(Expression<Func<T, P>> expr)
+            : base(expr.ToPropertyInfo())
+        {
+            this.getter = expr.Compile();
+        }
+
+        public PropertyModel(Expression<Func<T, P>> expr, PropertyModel originalModel)
+            : this(expr)
+        {
+            this.Description = originalModel.Description;
+            this.Descriptor = originalModel.Descriptor;
+        }
+
+        public override object GetValue(object entity)
+        {
+            return this.getter((T) entity);
         }
     }
 }
